<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_titletop_edicion"
        android:key="pref_key_edition_settings">
        <CheckBoxPreference
            android:key="pref_key_edicion"
            android:title="@string/pref_title_edicion"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_titletop_agenda"
        android:key="pref_key_agenda_settings">
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:title="@string/pref_title_listagenda"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_checkboxagenda"
            android:title="@string/pref_title_checkboxagenda"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_titletop_categorias"
        android:key="pref_key_categoria_settings">
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:title="@string/pref_title_categorias"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>