<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="phernandez.tfg.eps.uam.es.plandiario_v6.MainActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgagenda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cocinar"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/agenda"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgcategorias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hacerlacama"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
